--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -7,7 +7,7 @@ jobs:
     name: analyze the sound data (valid or not)
     runs-on: ubuntu-latest
     steps:
-    - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+#     - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
     - name: Check out repository code
       uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -18,12 +18,17 @@ jobs:
       run: pip install -r requirements.txt
     - name: Run analyzer
       run: python tools/analyze_script.py
+    - name: upload analyze artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: analyze-artifact
+        path: artifacts/analyze_artifact.csv
       
   stats:
     name: satistics collection
     runs-on: ubuntu-latest
     steps:
-    - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+#     - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
     - name: Check out repository code
       uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -32,5 +37,10 @@ jobs:
         python-version: '3.8'
     - name: Install requirements
       run: pip install -r requirements.txt
-    - name: Run analyzer
+    - name: Run stats collector
       run: python tools/stats_script.py
+    - name: upload stats artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: stats-artifact
+        path: artifacts/stats_artifact.csv
