--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -35,6 +35,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
+    - name: install soundfile
+      run: sudo pip install soundfile
     - name: Install requirements
       run: pip install -r requirements.txt
     - name: Run stats collector
