--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -38,7 +38,7 @@ jobs:
 #     - name: install soundfile
 #       run: sudo pip install soundfile
     - name: Install requirements
-      run: sudo pip install -r requirements.txt
+      run: sudo pip3 install -r requirements.txt
     - name: Run stats collector
       run: python tools/stats_script.py
     - name: upload stats artifact
