--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -37,6 +37,8 @@ jobs:
         python-version: '3.8'
 #     - name: install soundfile
 #       run: sudo pip install soundfile
+    - name: IDK
+      run: sudo apt-get install libsndfile1
     - name: Install requirements
       run: sudo pip3 install -r requirements.txt
     - name: Run stats collector
