--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -39,12 +39,12 @@ jobs:
 #       run: sudo pip install soundfile
     - name: IDK
       run: |
-        python3 -m pip install -U pip
+        python -m pip install -U pip
         sudo apt-get install libsndfile1
     - name: Install requirements
-      run: sudo pip3 install -r requirements.txt
+      run: sudo pip install -r requirements.txt
     - name: Run stats collector
-      run: python3 tools/stats_script.py
+      run: python tools/stats_script.py
     - name: upload stats artifact
       uses: actions/upload-artifact@v2
       with:
