--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -26,7 +26,7 @@ jobs:
       
   stats:
     name: satistics collection
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
 #     - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
     - name: Check out repository code
@@ -35,16 +35,19 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
-#     - name: install soundfile
-#       run: sudo pip install soundfile
+
     - name: IDK
       run: |
         pip3 install --upgrade pip
-        sudo apt-get install libsndfile1
+#        sudo apt-get install libsndfile1
+
     - name: Install requirements
-      run: sudo pip3 install -r requirements.txt
+#       run: sudo pip3 install -r requirements.txt
+      run: pip3 install -r requirements.txt
+      
     - name: Run stats collector
       run: python3 tools/stats_script.py
+      
     - name: upload stats artifact
       uses: actions/upload-artifact@v2
       with:
