--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -42,7 +42,9 @@ jobs:
       run: sudo apt-get install libsndfile1
 
     - name: Install requirements
-      run: sudo pip3 install -r requirements.txt
+      run: |
+        sudo pip3 install -r requirements.txt
+        sudo apt-get install python3-soundfile
       
     - name: Run stats collector
       run: python3 tools/stats_script.py
