--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -36,22 +36,18 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
-    - name: Install pipenv
-      run: |
-        pip install pipenv
-        pipenv install --deploy --dev
         
     - name: IDK
       run: sudo apt-get install libsndfile1
 
     - name: Install requirements
-      run: pipenv run sudo pip3 install -r requirements.txt
+      run: sudo pip3 install -r requirements.txt
       
     - name: manual install soundfile
-      run: pipenv run sudo apt-get install python3-soundfile
+      run: sudo apt-get install python3-soundfile
       
     - name: Run stats collector
-      run: pipenv run python3 tools/stats_script.py
+      run: python3 tools/stats_script.py
       
     - name: upload stats artifact
       uses: actions/upload-artifact@v2
