--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -25,7 +25,7 @@ jobs:
         path: artifacts/analyze_artifact.csv
       
   stats:
-    name: satistics collection
+    name: statistics collection
     runs-on: ubuntu-latest
     steps:
 
@@ -39,15 +39,19 @@ jobs:
         
     - name: IDK
       run: sudo apt-get install libsndfile1
-
-    - name: Install requirements
-      run: sudo pip3 install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
+#     - name: Install requirements
+#       run: sudo pip3 install -r requirements.txt
       
     - name: manual install soundfile
       run: sudo apt-get install python3-soundfile
       
     - name: Run stats collector
-      run: python ./tools/stats_script.py
+      run: python -m ./tools/stats_script.py
       
     - name: upload stats artifact
       uses: actions/upload-artifact@v2
