--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt install libsndfile1
+        sudo apt install ffmpeg
       
     - name: Install dependencies
       run: |
