--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -46,6 +46,9 @@ jobs:
     - name: libsndfile1
       run: sudo apt install libsndfile1
       
+    - name: libsndfile-dev
+      run: sudo apt install libsndfile-dev
+      
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
