--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -31,6 +31,10 @@ jobs:
 
     - name: Check out repository code
       uses: actions/checkout@v2
+      with:
+        lfs: true
+    - name: Checkout lfs objects
+      run: git lfs checout
       
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
