--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -3,21 +3,26 @@ name: Validation-Statistic
 on: push
 
 jobs:
+
   analyze:
     name: analyze the sound data (valid or not)
     runs-on: ubuntu-latest
     steps:
-#     - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+    
     - name: Check out repository code
       uses: actions/checkout@v2
+      
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
+        
     - name: Install requirements
       run: pip install -r requirements.txt
+      
     - name: Run analyzer
       run: python tools/analyze_script.py
+      
     - name: upload analyze artifact
       uses: actions/upload-artifact@v2
       with:
@@ -33,6 +38,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         lfs: true
+        
     - name: Checkout lfs objects
       run: git lfs checkout
       
@@ -57,15 +63,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
-#     - name: Install requirements
-#       run: sudo pip3 install -r requirements.txt
-      
-#     - name: manual install soundfile
-#       run: sudo apt-get install python3-soundfile
-      
-    - name: test wav
-      run: cat data/15362__djgriffin__tibetan-chant-1.wav
+           
+#     - name: test wav
+#       run: cat data/15362__djgriffin__tibetan-chant-1.wav
       
     - name: Run stats collector
       run: python ./tools/stats_script.py
